make me viewable

--- a/index.html
+++ b/index.html
@@ -1,3 +1,13 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Sport Scope</title>
+    <link rel="stylesheet" href="./css/style.css">
+    <script src="./js/bootstrap.min.js"></script>
+</head>
+<body>
+
 <header>
     <ul>
         <li><a href="" target="blank" class="fa fa-shopping-cart fa-lg" alt="shopping cart"></a></li>
@@ -20,3 +30,17 @@
         </ul>
     </nav>
 </header>
+
+
+
+<footer>
+    <ul>
+        <li><a href="tel:18883357875">Call Us</a></li>
+        <li><a href="mailto:info@sportscopevideo.com">Email Us</a></li>
+        <li><a href="privacy-policy.php">Privacy Policy</a></li>
+        <li><p>&copy; 2016 <a href="http://www.sportscopevideo.com">Sport Scope End Zone Cameras</a></p></li>
+    </ul>        
+</footer>
+
+</body>
+</html>
