--- a/development/footer.html
+++ b/development/footer.html
@@ -1,4 +1,4 @@
-<footer>
+<footer class="row clearfix">
     <ul>
         <li><a href="tel:18883357875">Call Us</a></li>
         <li><a href="mailto:info@sportscopevideo.com">Email Us</a></li>
