--- a/development/header.html
+++ b/development/header.html
@@ -1,22 +1,26 @@
-<header>
-    <ul>
-        <li><a href="" target="blank" class="fa fa-shopping-cart fa-lg" alt="shopping cart"></a></li>
-        <li><a href="" target="blank" class="fa fa-facebook fa-lg" alt="facebook"></a></li>
-        <li><a href="" target="blank" class="fa fa-twitter fa-lg" alt="twitter"></a></li>
-        <li><a href="" target="blank" class="fa fa-youtube fa-lg" alt="youtube"></a></li>
-        <li><a href="" target="blank" class="fa fa-google-plus fa-lg" alt="google plus"></a></li>
-        <li><a href="" target="blank" class="fa fa-linkedin fa-lg" alt="linkedin"></a></li>
-        <li><a href="tel:18883357875" class="fa fa-phone fa-lg" alt="phone"></a></li>
-        <li><a href="mailto:info@sportscopevideo.com" class="fa fa-envelope-o fa-lg" alt="email"></a></li>
-    </ul>
-    <img src="img/sportScope.svg">
-    <nav>
+<header class="row clearfix">
+    <div class="row clearfix social">
         <ul>
-            <li><a href="">Home</a></li>
-            <li><a href="">Products</a></li>
-            <li><a href="">Software</a></li>
-            <li><a href="">About</a></li>
-            <li><a href="">Contact</a></li>
+            <li><a href="" target="blank" class="fa fa-shopping-cart fa-lg" alt="shopping cart"></a></li>
+            <li><a href="" target="blank" class="fa fa-facebook fa-lg" alt="facebook"></a></li>
+            <li><a href="" target="blank" class="fa fa-twitter fa-lg" alt="twitter"></a></li>
+            <li><a href="" target="blank" class="fa fa-youtube fa-lg" alt="youtube"></a></li>
+            <li><a href="" target="blank" class="fa fa-google-plus fa-lg" alt="google plus"></a></li>
+            <li><a href="" target="blank" class="fa fa-linkedin fa-lg" alt="linkedin"></a></li>
+            <li><a href="tel:18883357875" class="fa fa-phone fa-lg" alt="phone"></a></li>
+            <li><a href="mailto:info@sportscopevideo.com" class="fa fa-envelope-o fa-lg" alt="email"></a></li>
         </ul>
-    </nav>
+    </div>
+    <div class="row clearfix">
+        <img src="./img/sportScope.svg">
+        <nav>
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="">Products</a></li>
+                <li><a href="">Software</a></li>
+                <li><a href="">About</a></li>
+                <li><a href="">Contact</a></li>
+            </ul>
+        </nav>
+    </div>
 </header>
