--- a/development/index.html
+++ b/development/index.html
@@ -3,16 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title>Sport Scope</title>
+
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,600|Coda' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="./css/style.css">
     <script src="./js/bootstrap.min.js"></script>
 </head>
 <body>
+<div class="container-fluid">
 
 @@include('./header.html')
 
 
-
 @@include('./footer.html')
+</div>
 
 </body>
 </html>
