--- a/development/index.html
+++ b/development/index.html
@@ -14,6 +14,19 @@
 @@include('./header.html')
 
 
+<div class="row clearfix full-image">
+	<section class="row banner">
+		<div class="col-lg-8">
+			<h4 class="headline">Rise above the rest.</h4>
+		</div>
+		<div class="col-lg-3 edge-ad">
+			<img src="./img/edge.svg" alt="">
+			<p>Refine your game. Instantly.</p>
+		</div>
+	</section>	
+
+</div>
+
 @@include('./footer.html')
 </div>
 
