--- a/development/footer.html
+++ b/development/footer.html
@@ -6,3 +6,8 @@
         <li><p>&copy; 2016 <a href="http://www.sportscopevideo.com">Sport Scope End Zone Cameras</a></p></li>
     </ul>        
 </footer>
+
+</div>
+
+</body>
+</html>
