--- a/development/index.html
+++ b/development/index.html
@@ -1,16 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Sport Scope</title>
-
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,600|Coda' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="./css/style.css">
-    <script src="./js/bootstrap.min.js"></script>
-</head>
-<body>
-<div class="container-fluid">
-
 @@include('./header.html')
 
 
@@ -23,12 +10,51 @@
 			<img src="./img/edge.svg" alt="">
 			<p>Refine your game. Instantly.</p>
 		</div>
-	</section>	
+	</section>
+
+
+<div class="row featured-content product">
+	<section class="row clearfix">
+		<div class="col-lg-1"></div>
+		<div class="col-lg-10"><h1>30' Endzone Camera</h1></div>
+	</section>
+	<section class="row clearfix">
+		<div class="col-lg-1"></div>
+		<div class="col-lg-5">
+			<img src="./img/field2" alt="">
+		</div>
+		<div class="col-lg-5">
+			<div class="col-lg-6">
+				<ul>
+					<li>Automatic Camera Controls</li>
+					<li>30 ft. Extended Height</li>
+					<li>10 yr. Frame Warranty</li>
+					<li>Easy Set-up and Operation</li>
+					<li>Everything Included</li>
+					<li>HD Camera and 9” Monitor</li>
+					<li>Choice of Tower Color</li>
+				</ul>
+			</div>
+			<div class="col-lg-6">
+				<button><h5>order now</h5></button>
+				<h2>$4,199</h2>
+				<p>Ships within 48 hours.</p>
+			</div>
+		</div>
+	</section>
+
+	<secion class="row clearfix">
+		<div class="col-lg-1"></div>
+		<div class="col-lg-10">
+			<blockquote>The 30' Sport Scope was a tremendous asset to our team this fall. The end zone view allowed us to better correct and implement schemes which greatly helped during our run to the state championship this season. Without this technology, I don't think we would have been as prepared or efficient as a team. I can't speak highly enough of our experience and the benefit it had on our program; the Sport Scope truly was a game changer.</blockquote>
+			<h5>Corey Ingvalson, Head Football Coach</h5>
+			<h6>Prosser High School, Washington</h6>
+			<p>2015 Division 2A State Champions</p>
+		</div>
+	</secion>
+</div>	
+
 
 </div>
 
 @@include('./footer.html')
-</div>
-
-</body>
-</html>
