nearing completion of phase 1

--- a/development/index.html
+++ b/development/index.html
@@ -3,13 +3,15 @@
 
 <div class="row clearfix full-image">
 	<section class="row banner">
-		<div class="col-lg-8">
+		<div class="col-lg-10">
 			<h4 class="headline">Rise above the rest.</h4>
 		</div>
-		<div class="col-lg-3 edge-ad">
-			<img src="./img/edge.svg" alt="">
-			<p>Refine your game. Instantly.</p>
-		</div>
+		<a href="software.html">
+			<div class="col-lg-2 edge-ad">
+				<img src="./img/edge.svg" alt="">
+				<p>Refine your game. Instantly.</p>
+			</div>
+		</a>
 	</section>
 
 
@@ -21,7 +23,7 @@
 	<section class="row clearfix">
 		<div class="col-lg-1"></div>
 		<div class="col-lg-5">
-			<img src="./img/field2" alt="">
+			<img src="./img/endzone30.jpg" alt="">
 		</div>
 		<div class="col-lg-5">
 			<div class="col-lg-6">
