--- a/index.html
+++ b/index.html
@@ -3,37 +3,100 @@
 <head>
     <meta charset="UTF-8">
     <title>Sport Scope</title>
+
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,600|Coda' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="./css/style.css">
     <script src="./js/bootstrap.min.js"></script>
 </head>
 <body>
-
-<header>
-    <ul>
-        <li><a href="" target="blank" class="fa fa-shopping-cart fa-lg" alt="shopping cart"></a></li>
-        <li><a href="" target="blank" class="fa fa-facebook fa-lg" alt="facebook"></a></li>
-        <li><a href="" target="blank" class="fa fa-twitter fa-lg" alt="twitter"></a></li>
-        <li><a href="" target="blank" class="fa fa-youtube fa-lg" alt="youtube"></a></li>
-        <li><a href="" target="blank" class="fa fa-google-plus fa-lg" alt="google plus"></a></li>
-        <li><a href="" target="blank" class="fa fa-linkedin fa-lg" alt="linkedin"></a></li>
-        <li><a href="tel:18883357875" class="fa fa-phone fa-lg" alt="phone"></a></li>
-        <li><a href="mailto:info@sportscopevideo.com" class="fa fa-envelope-o fa-lg" alt="email"></a></li>
-    </ul>
-    <img src="img/sportScope.svg">
-    <nav>
+<div class="container-fluid">
+<header class="row clearfix">
+    <div class="row clearfix social">
         <ul>
-            <li><a href="">Home</a></li>
-            <li><a href="">Products</a></li>
-            <li><a href="">Software</a></li>
-            <li><a href="">About</a></li>
-            <li><a href="">Contact</a></li>
+            <li><a href="" target="blank" class="fa fa-shopping-cart fa-lg" alt="shopping cart"></a></li>
+            <li><a href="" target="blank" class="fa fa-facebook fa-lg" alt="facebook"></a></li>
+            <li><a href="" target="blank" class="fa fa-twitter fa-lg" alt="twitter"></a></li>
+            <li><a href="" target="blank" class="fa fa-youtube fa-lg" alt="youtube"></a></li>
+            <li><a href="" target="blank" class="fa fa-google-plus fa-lg" alt="google plus"></a></li>
+            <li><a href="" target="blank" class="fa fa-linkedin fa-lg" alt="linkedin"></a></li>
+            <li><a href="tel:18883357875" class="fa fa-phone fa-lg" alt="phone"></a></li>
+            <li><a href="mailto:info@sportscopevideo.com" class="fa fa-envelope-o fa-lg" alt="email"></a></li>
         </ul>
-    </nav>
+    </div>
+    <div class="row clearfix">
+        <img src="./img/sportScope.svg">
+        <nav>
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="">Products</a></li>
+                <li><a href="">Software</a></li>
+                <li><a href="">About</a></li>
+                <li><a href="">Contact</a></li>
+            </ul>
+        </nav>
+    </div>
 </header>
 
 
+<div class="row clearfix full-image">
+	<section class="row banner">
+		<div class="col-lg-10">
+			<h4 class="headline">Rise above the rest.</h4>
+		</div>
+		<a href="software.html">
+			<div class="col-lg-2 edge-ad">
+				<img src="./img/edge.svg" alt="">
+				<p>Refine your game. Instantly.</p>
+			</div>
+		</a>
+	</section>
 
-<footer>
+
+<div class="row featured-content product">
+	<section class="row clearfix">
+		<div class="col-lg-1"></div>
+		<div class="col-lg-10"><h1>30' Endzone Camera</h1></div>
+	</section>
+	<section class="row clearfix">
+		<div class="col-lg-1"></div>
+		<div class="col-lg-5">
+			<img src="./img/endzone30.jpg" alt="">
+		</div>
+		<div class="col-lg-5">
+			<div class="col-lg-6">
+				<ul>
+					<li>Automatic Camera Controls</li>
+					<li>30 ft. Extended Height</li>
+					<li>10 yr. Frame Warranty</li>
+					<li>Easy Set-up and Operation</li>
+					<li>Everything Included</li>
+					<li>HD Camera and 9” Monitor</li>
+					<li>Choice of Tower Color</li>
+				</ul>
+			</div>
+			<div class="col-lg-6">
+				<button><h5>order now</h5></button>
+				<h2>$4,199</h2>
+				<p>Ships within 48 hours.</p>
+			</div>
+		</div>
+	</section>
+
+	<secion class="row clearfix">
+		<div class="col-lg-1"></div>
+		<div class="col-lg-10">
+			<blockquote>The 30' Sport Scope was a tremendous asset to our team this fall. The end zone view allowed us to better correct and implement schemes which greatly helped during our run to the state championship this season. Without this technology, I don't think we would have been as prepared or efficient as a team. I can't speak highly enough of our experience and the benefit it had on our program; the Sport Scope truly was a game changer.</blockquote>
+			<h5>Corey Ingvalson, Head Football Coach</h5>
+			<h6>Prosser High School, Washington</h6>
+			<p>2015 Division 2A State Champions</p>
+		</div>
+	</secion>
+</div>	
+
+
+</div>
+
+<footer class="row clearfix">
     <ul>
         <li><a href="tel:18883357875">Call Us</a></li>
         <li><a href="mailto:info@sportscopevideo.com">Email Us</a></li>
@@ -41,6 +104,8 @@
         <li><p>&copy; 2016 <a href="http://www.sportscopevideo.com">Sport Scope End Zone Cameras</a></p></li>
     </ul>        
 </footer>
+
+</div>
 
 </body>
 </html>
