--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 	<section class="row clearfix">
 		<div class="col-lg-1"></div>
 		<div class="col-lg-5">
-			<img src="./img/endzone30.JPG" alt="">
+			<img src="./img/endzone30.JPG" alt="thirty foot endzone camera">
 		</div>
 		<div class="col-lg-5">
 			<div class="col-lg-6">
