Light color scheme

--- a/development/header.html
+++ b/development/header.html
@@ -24,15 +24,19 @@
         </ul>
     </div>
     <div class="row clearfix">
-        <img src="./img/sportScope.svg">
-        <nav>
-            <ul>
-                <li><a href="">Home</a></li>
-                <li><a href="">Products</a></li>
-                <li><a href="">Software</a></li>
-                <li><a href="">About</a></li>
-                <li><a href="">Contact</a></li>
-            </ul>
-        </nav>
+        <div class="col-lg-2">
+            <img src="./img/sportScope.svg">
+        </div>
+        <div class="col-lg-10">
+            <nav>
+                <ul>
+                    <li><a href="">Home</a></li>
+                    <li><a href="">Products</a></li>
+                    <li><a href="">Software</a></li>
+                    <li><a href="">About</a></li>
+                    <li><a href="">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
     </div>
 </header>
