Light color scheme

--- a/index.html
+++ b/index.html
@@ -24,16 +24,20 @@
         </ul>
     </div>
     <div class="row clearfix">
-        <img src="./img/sportScope.svg">
-        <nav>
-            <ul>
-                <li><a href="">Home</a></li>
-                <li><a href="">Products</a></li>
-                <li><a href="">Software</a></li>
-                <li><a href="">About</a></li>
-                <li><a href="">Contact</a></li>
-            </ul>
-        </nav>
+        <div class="col-lg-2">
+            <img src="./img/sportScope.svg">
+        </div>
+        <div class="col-lg-10">
+            <nav>
+                <ul>
+                    <li><a href="">Home</a></li>
+                    <li><a href="">Products</a></li>
+                    <li><a href="">Software</a></li>
+                    <li><a href="">About</a></li>
+                    <li><a href="">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
     </div>
 </header>
 
@@ -60,7 +64,7 @@
 	<section class="row clearfix">
 		<div class="col-lg-1"></div>
 		<div class="col-lg-5">
-			<img src="./img/endzone30.JPG" alt="thirty foot endzone camera">
+			<img src="./img/endzone30.jpg" alt="">
 		</div>
 		<div class="col-lg-5">
 			<div class="col-lg-6">
