--- a/development/index.html
+++ b/development/index.html
@@ -3,13 +3,17 @@
 
 <div class="row clearfix full-image">
 	<section class="row banner">
-		<div class="col-lg-10">
+		<div class="col-lg-9">
 			<h4 class="headline">Rise above the rest.</h4>
 		</div>
 		<a href="software.html">
-			<div class="col-lg-2 edge-ad">
-				<img src="./img/edge.svg" alt="">
-				<p>Refine your game. Instantly.</p>
+			<div class="col-lg-3 edge-ad">
+				<div class="col-lg-6">
+					<img src="./img/edge.svg" alt="">
+				</div>
+				<div class="col-lg-6">
+					<p>Refine your game. Instantly.</p>
+				</div>
 			</div>
 		</a>
 	</section>
