--- a/development/header.html
+++ b/development/header.html
@@ -10,33 +10,37 @@
 </head>
 <body>
 <div class="container-fluid">
-<header class="row clearfix">
-    <div class="row clearfix social">
-        <ul>
-            <li><a href="" target="blank" class="fa fa-shopping-cart fa-lg" alt="shopping cart"></a></li>
-            <li><a href="" target="blank" class="fa fa-facebook fa-lg" alt="facebook"></a></li>
-            <li><a href="" target="blank" class="fa fa-twitter fa-lg" alt="twitter"></a></li>
-            <li><a href="" target="blank" class="fa fa-youtube fa-lg" alt="youtube"></a></li>
-            <li><a href="" target="blank" class="fa fa-google-plus fa-lg" alt="google plus"></a></li>
-            <li><a href="" target="blank" class="fa fa-linkedin fa-lg" alt="linkedin"></a></li>
-            <li><a href="tel:18883357875" class="fa fa-phone fa-lg" alt="phone"></a></li>
-            <li><a href="mailto:info@sportscopevideo.com" class="fa fa-envelope-o fa-lg" alt="email"></a></li>
-        </ul>
-    </div>
-    <div class="row clearfix">
-        <div class="col-lg-2">
+    <header class="row clearfix">
+        <div class="col-lg-3">
             <img src="./img/sportScope.svg">
         </div>
-        <div class="col-lg-10">
-            <nav>
-                <ul>
-                    <li><a href="">Home</a></li>
-                    <li><a href="">Products</a></li>
-                    <li><a href="">Software</a></li>
-                    <li><a href="">About</a></li>
-                    <li><a href="">Contact</a></li>
-                </ul>
-            </nav>
+        <div class="col-lg-9">
+            <div class="row clearfix social">
+                <div class="col-lg-12">
+                    <ul>
+                        <li><a href="" target="blank" class="fa fa-shopping-cart " alt="shopping cart"></a></li>
+                        <li><a href="" target="blank" class="fa fa-facebook " alt="facebook"></a></li>
+                        <li><a href="" target="blank" class="fa fa-twitter " alt="twitter"></a></li>
+                        <li><a href="" target="blank" class="fa fa-youtube " alt="youtube"></a></li>
+                        <li><a href="" target="blank" class="fa fa-google-plus " alt="google plus"></a></li>
+                        <li><a href="" target="blank" class="fa fa-linkedin " alt="linkedin"></a></li>
+                        <li><a href="tel:18883357875" class="fa fa-phone " alt="phone"></a></li>
+                        <li><a href="mailto:info@sportscopevideo.com" class="fa fa-envelope-o " alt="email"></a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="row clearfix">
+                <div class="col-lg-12">
+                    <nav>
+                        <ul>
+                            <li><a href="">Home</a></li>
+                            <li><a href="">Products</a></li>
+                            <li><a href="">Software</a></li>
+                            <li><a href="">About</a></li>
+                            <li><a href="">Contact</a></li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
         </div>
-    </div>
 </header>
