--- a/development/header.html
+++ b/development/header.html
@@ -52,19 +52,19 @@
                                     <a href="sport-scope-30.html">Sport Scope 30'</a>
                                 </li>
                                 <li>
-                                    <a href="portfolio-2-col.html">Sport Scope 25'</a>
+                                    <a href="sport-scope-25.html">Sport Scope 25'</a>
                                 </li>
                                 <li>
-                                    <a href="portfolio-3-col.html">Quick Scope 16'</a>
+                                    <a href="quick-scope-16.html">Quick Scope 16'</a>
                                 </li>
                                 <li>
-                                    <a href="portfolio-4-col.html">Quick Scope 11'</a>
+                                    <a href="quick-scope-11.html">Quick Scope 11'</a>
                                 </li>
                                 <li>
-                                    <a href="portfolio-item.html">Press Box</a>
+                                    <a href="press-box.html">Press Box</a>
                                 </li>
                                 <li>
-                                    <a href="portfolio-item.html">Accessories</a>
+                                    <a href="accessories.html">Accessories</a>
                                 </li>
                             </ul>
                         </li>
