--- a/development/index.html
+++ b/development/index.html
@@ -13,19 +13,19 @@
         <div class="item active">
             <div class="fill" style="background-image:url('img/30sportScope/DSC_0110.JPG');"></div>
             <div class="carousel-caption">
-                <h2>Caption 1</h2>
+                <h2>This Could Be Advertising a Current Promotion.</h2>
             </div>
         </div>
         <div class="item">
             <div class="fill" style="background-image:url('img/25manual/IMG_0262.JPG');"></div>
             <div class="carousel-caption">
-                <h2>Caption 2</h2>
+                <h2>Or a New Product.</h2>
             </div>
         </div>
         <div class="item">
             <div class="fill" style="background-image:url('img/30sportScope/DSC_0099.JPG');"></div>
             <div class="carousel-caption">
-                <h2>Caption 3</h2>
+                <h2>Or Just Saying "Hello".</h2>
             </div>
         </div>
     </div>
@@ -45,9 +45,7 @@
     <!-- Marketing Icons Section -->
     <div class="row">
         <div class="col-lg-12">
-            <h1 class="page-header left">
-                Popular Products
-            </h1>
+            <h3 class="page-header left">Popular Products</h3>
         </div>
         <div class="col-md-4">
             <div class="panel panel-default">
@@ -67,7 +65,7 @@
                         <li>HD Camera and 9" Monitor</li>
                         <li>Choice of Tower Color</li>
                     </ul>
-                    <a href="#" class="btn btn-default">Learn More</a>
+                    <a href="./sport-scope-30.html" class="btn btn-default">Learn More</a>
                 </div>
             </div>
         </div>
@@ -113,7 +111,7 @@
    </div>
    <!-- /.row -->
 
-   <!-- Portfolio Section -->
+   <!-- Portfolio Section
    <div class="row">
     <div class="col-lg-12">
         <h2 class="page-header">Portfolio Heading</h2>
@@ -149,9 +147,9 @@
         </a>
     </div>
 </div>
-<!-- /.row -->
+ /.row -->
 
-<!-- Features Section -->
+<!-- Features Section
 <div class="row">
     <div class="col-lg-12">
         <h2 class="page-header">Modern Business Features</h2>
@@ -173,11 +171,11 @@
         <img class="img-responsive" src="http://placehold.it/700x450" alt="">
     </div>
 </div>
-<!-- /.row -->
+/.row -->
 
 <hr>
 
-<!-- Call to Action Section -->
+<!-- Call to Action Section
 <div class="well">
     <div class="row">
         <div class="col-md-8">
@@ -188,6 +186,7 @@
         </div>
     </div>
 </div>
+-->
 
 <hr>
 @@include('./footer.html')  
