--- a/development/sport-scope-25.html
+++ b/development/sport-scope-25.html
@@ -8,12 +8,12 @@
     <div class="row">
         <div class="col-lg-12">
             <h1 class="page-header">Sport Scope
-                <small>30'</small>
+                <small>25'</small>
             </h1>
             <ol class="breadcrumb">
                 <li><a href="index.html">Home</a>
                 </li>
-                <li class="active">Portfolio Item</li>
+                <li class="active">25' Sport Scope</li>
             </ol>
         </div>
     </div>
@@ -35,16 +35,16 @@
                 <!-- Wrapper for slides -->
                 <div class="carousel-inner">
                     <div class="item active">
-                        <img class="img-responsive" src="./img/30sportScope/DSC_0054.JPG" alt="">
+                        <img class="img-responsive" src="./img/25manual/IMG_0258.JPG" alt="">
                     </div>
                     <div class="item">
-                        <img class="img-responsive" src="./img/30sportScope/DSC_0126.JPG" alt="">
+                        <img class="img-responsive" src="./img/25manual/IMG_0268.JPG" alt="">
                     </div>
                     <div class="item">
-                        <img class="img-responsive" src="./img/30sportScope/DSC_0068.JPG" alt="">
+                        <img class="img-responsive" src="./img/25manual/IMG_0263.JPG" alt="">
                     </div>
                     <div class="item">
-                        <img class="img-responsive" src="./img/30sportScope/DSC_0006.JPG" alt="">
+                        <img class="img-responsive" src="./img/25manual/IMG_0260.JPG" alt="">
                     </div>
 
                 </div>
@@ -60,24 +60,22 @@
         </div>
 
         <div class="col-md-4">
-            <p>The Sport Scope is easy to transport, quick to set-up, and of all the end zone cameras on the market, is the only one that comes standard with everything you need to film right out of the box. You won't find a more important piece of equipment that will enhance how you film your team and what you see on the field. Check out our instructional video to see for yourself.</p>
-            <iframe src="https://www.youtube.com/embed/q59iFMSLzsA" frameborder="0" allowfullscreen></iframe>
+            <p>The Sport Scope 25’ is an endzone camera system that is manually operated by a pan and tilt system, which allows the operator the ability to smoothly and precisely control the movement of the camera. This system is perfect for quick-action sports, such as soccer. The Sport Scope 25’ is very easy and simple to setup, and like all of our other end zone video systems, it comes standard with everything you need to film right out of the box.</p>
+            <iframe src="https://www.youtube.com/embed/Q7S0gYiccvw" frameborder="0" allowfullscreen></iframe>
 
             <div class="row">
                 <div class="col-lg-6">
                     <small><ul>
-                        <li>Automatic Camera Controls</li>
-                        <li>30 ft. Extended Height</li>
-                        <li>10 yr. Frame Warranty</li>
-                        <li>Easy Set-up and Operation</li>
-                        <li>Everything Included</li>
-                        <li>HD Camera and 9" Monitor</li>
-                        <li>Choice of Tower Color</li>
+                        <li>Smooth &amp; Precise Controls</li>
+<li>25 ft. Extended Height</li>
+<li>10 yr. Frame Warranty</li>
+<li>Easy Set-up and Operation</li>
+<li>Everything Included</li>
+<li>HD Camera and 9" Monitor</li>
                     </ul></small>
                 </div>
                 <div class="col-lg-6">
-                    <h2>$4,199</h2>
-                    <h6>Offer Through March 31, 2016</h6>
+                    <h2>$4,499</h2>
                     <p>Ships within 48 hours</p>
                     <button type="button" class="btn btn-primary btn-lg">Order Now</button>
 
@@ -139,12 +137,13 @@
                     <div class="panel panel-default">
                         <div class="panel-heading">
                             <h4 class="panel-title">
-                                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseFour">Pan/Tilt Head &amp; Joystick</a>
+                                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseFour">Pan/Tilt Head</a>
                             </h4>
                         </div>
                         <div id="collapseFour" class="panel-collapse collapse">
                             <div class="panel-body">
-                                The Sport Scope is the only endzone camera on the market with a custom made pan / tilt head and joystick combination. Our durable design allows the operator to comfortably control the movement of the camcorder at variable speeds. Other automatic endzone cameras use off the shelf pan / tilt heads that are made for still photography and not for fast paced sports like football. Sport Scope's joystick remote is also unique to the endzone camera market and allows for easy, precise control of what the operator is filming. 
+                                The Sport Scope 25' is a manually controlled system which pans and tilts the camera while is sits on a pivoting pan/tilt camera plate.  The pan/tilt camera plate comes with a quick release plate on top of it to allow the operator to easily attach and position the camera.
+
                             </div>
                         </div>
                     </div>
@@ -183,12 +182,12 @@
                     <div class="panel panel-default">
                         <div class="panel-heading">
                             <h4 class="panel-title">
-                                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseSeven">Sports Chair</a>
+                                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseSeven">Sports Stool</a>
                             </h4>
                         </div>
                         <div id="collapseSeven" class="panel-collapse collapse">
                             <div class="panel-body">
-                                The Sport Scope is the only endzone camera that supplies the user with everything they need to comfortable sit down while they operate their end zone camera. Just detach the control plate from the tower and sit it in your lap to film.
+                                The Sport Scope 25' is the only endzone camera that supplies the user with everything they need to comfortably sit down while they operate their end zone camera. The sports stool packs up and fits in the larger travel bag.
                             </div>
                         </div>
                     </div>
@@ -253,12 +252,12 @@
                     <div class="panel panel-default">
                         <div class="panel-heading">
                             <h4 class="panel-title">
-                                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseTwelve">30' Cable</a>
+                                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseTwelve">25' Cable</a>
                             </h4>
                         </div>
                         <div id="collapseTwelve" class="panel-collapse collapse">
                             <div class="panel-body">
-                                Each Sport Scope comes with a 30ft (25ft for the Sport Scope 25') custom cable. Our single cable end zone camera system allows for a quick and easy set up. The cable is also protected with an abrasion resistant cover to protect the life of the cable. 
+                                Each Sport Scope comes with a 25ft custom cable. Our single cable end zone camera system allows for a quick and easy set up. The cable is also protected with an abrasion resistant cover to protect the life of the cable. 
                             </div>
                         </div>
                     </div>
@@ -279,12 +278,25 @@
                     <div class="panel panel-default">
                         <div class="panel-heading">
                             <h4 class="panel-title">
-                                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseFourteen">Rain Cover</a>
+                                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseFourteen">Bottom Rain Gear</a>
                             </h4>
                         </div>
                         <div id="collapseFourteen" class="panel-collapse collapse">
                             <div class="panel-body">
-                                The control cover is a 100% waterproof, clear cover that protects the control center (monitor, Sony remote, and joystick) from harsh weather. Without this important piece of rain gear it would be too risky to use an endzone camera is harsh weather.
+                                The Sport Scope 25' end zone camera comes standard with a clear cover for the camera remote that is 100% waterproof and a clear cover that protects the 9" monitor and battery from harsh weather. Without this important piece of rain gear it would be too risky to use an endzone camera is harsh weather. 
+                            </div>
+                        </div>
+                    </div>
+                    <!-- /.panel -->
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <h4 class="panel-title">
+                                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseFifteen">Tilt Handle &amp; Reel</a>
+                            </h4>
+                        </div>
+                        <div id="collapseFifteen" class="panel-collapse collapse">
+                            <div class="panel-body">
+                                The Sport Scope 25' allows the operator to pan and tilt the camera with a tilt handle and cable reel.  The handle is attached to the 25' mast and pans the camera right and left while the cable reel attaches to the camera plate at the top of the mast.  The camera will tilt up and down as the tilt handle is moved up and down.  For more information check out our Sport Scope 25' set up video. 
                             </div>
                         </div>
                     </div>
@@ -306,12 +318,12 @@
 
         <div class="col-sm-3 col-xs-6 col-lg-4">
 
-            <iframe src="https://www.youtube.com/embed/pR252kS8QPc" frameborder="0" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/rD7Jx-MB0h4" frameborder="0" allowfullscreen></iframe>
         </div>
 
         <div class="col-sm-3 col-xs-6 col-lg-4">
 
-            <iframe src="https://www.youtube.com/embed/rD7Jx-MB0h4" frameborder="0" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/4wqKhcE36v4" frameborder="0" allowfullscreen></iframe>
 
         </div>
 
