--- a/development/header.html
+++ b/development/header.html
@@ -29,7 +29,7 @@
     <body>
 
         <!-- Navigation -->
-        <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <nav class="navbar navbar-fixed-top" role="navigation">
             <div class="container">
                 <!-- Brand and toggle get grouped for better mobile display -->
                 <div class="navbar-header">
@@ -75,7 +75,7 @@
                                     <a href="portfolio-1-col.html">Software</a>
                                 </li>
                                 <li>
-                                    <a href="portfolio-2-col.html">Support</a>
+                                    <a href="portfolio-4-col.html">Support</a>
                                 </li>
                             </ul>
                         </li>
