--- a/development/index.html
+++ b/development/index.html
@@ -104,7 +104,7 @@
                         <li>Everything Included</li>
                     </ul>
 
-                    <a href="#" class="btn btn-default">Learn More</a>
+                    <a href="./quick-scope-16.html" class="btn btn-default">Learn More</a>
                 </div>
             </div>
         </div>
