--- a/development/sport-scope-25.html
+++ b/development/sport-scope-25.html
@@ -88,7 +88,7 @@
 
         <div class="row">
             <div class="col-lg-12">
-                <h3 class="page-header left">Everything Included</h3>
+                <h3 class="page-header left">Includes</h3>
             </div>
             <div class="col-lg-4">
 
